<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Pink"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginActivity">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="96dp"
                android:layout_marginRight="16dp"
                android:src="@mipmap/ic_launcher_reading_foreground"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/profilebuttonChoose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/lendybg"
                android:text="@string/add_photo"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />

            <EditText
                android:id="@+id/usernameInput"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="370dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_person_icon"
                android:drawableLeft="@drawable/custom_person_icon"
                android:drawablePadding="12dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawableLeft="@drawable/custom_email_icon"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

            <Button
                android:id="@+id/registerButton"
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:text="@string/signup"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                app:layout_constraintVertical_bias="0.371" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_lock_icon"
                android:drawableLeft="@drawable/custom_lock_icon"
                android:drawablePadding="12dp"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInput" />


            <!--            android:enabled="false"-->


            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />


            <TextView
                android:id="@+id/createAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/create_an_acc"
                android:textColor="@color/lendybg"
                android:textSize="44sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/usernameInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </TableLayout>
</ScrollView>