<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Pink"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.login.LoginActivity">


            <!--            android:enabled="false"-->


            <EditText
                android:id="@+id/emailForReset"
                android:layout_width="330dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="292dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/custom_input"
                android:drawableStart="@drawable/custom_email_icon"
                android:drawableLeft="@drawable/custom_email_icon"
                android:drawablePadding="12dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/resetpassButton"
                android:layout_width="330dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:text="@string/reset_password"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailForReset" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="138dp"
                android:layout_height="143dp"
                android:layout_marginTop="36dp"
                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/lendy_logo_circle_foreground" />

            <TextView
                android:id="@+id/createAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="164dp"
                android:text="@string/forget_your_password"
                android:textColor="@color/lendybg"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descripeTV"
                android:layout_width="326dp"
                android:layout_height="71dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="Confirm your email and we will send the instructions."
                android:textAlignment="center"
                android:textColor="@color/lendybg"
                android:textSize="18dp"
                app:layout_constraintBottom_toTopOf="@+id/emailForReset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAcc"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </TableLayout>
</ScrollView>